# AoC

./: .gitignore
aoc_10_1/src/: main  main.rs
aoc_12_1/: Cargo.toml
aoc_12_1/src/: main.rs
aoc_13_1/src/: main  main.rs
aoc_13_2/src/: main.rs
aoc_14_1/src/: main  main.rs
aoc_14_2/src/: main  main.rs
aoc_15_2/: Cargo.toml
aoc_16_1/src/: main.rs
aoc_17_1/: out.txt
aoc_19_2/: Cargo.toml
aoc_1_2/: Cargo.toml
aoc_2019/: Cargo.toml
aoc_2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  intscript.rs  lib.rs
aoc_2020/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb
aoc_2021/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb
aoc_20_1/: Cargo.toml
aoc_21_1/: Cargo.toml
aoc_22_1/: Cargo.toml
aoc_22_2/: Cargo.toml
aoc_23_1/: Cargo.toml
aoc_23_2/: Cargo.toml
aoc_24_2/: Cargo.toml
aoc_3_1/: Cargo.toml
aoc_4_2/: Cargo.toml
aoc_5_2/: Cargo.toml
aoc_8_1/: Cargo.toml
(+104 files in other folders)
