[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["g3tha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
petgraph = "0.4.13"
permutohedron = "0.2.4"
criterion = "0.3"
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"